[package]
name = "pulsar-bus-napi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NAPI bindings for the Pulsar event bus"

[lib]
crate-type = ["cdylib"]

[dependencies]
pulsar-bus = { path = "../pulsar-bus" }
ream-napi-core = { path = "../ream-napi-core" }
napi = { version = "2", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "2"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[build-dependencies]
napi-build = "2"
